# ElectoralCollege

./: EV.c  Makefile.in  README.md  RamziTime.c  RamziTime.h  config.h.in  configure  configure.in  globals.h  states.h
