/*******************************************************************************
 * Copyright 2018 Bose Incorporated. All rights reserved.
 *
 * File Name : configure.in
 *
 * Description :
 *    -- This file is used by autoconf to create the configure script.
 *
 * Version : 0.1.0
 *
 * Created Date : August 25 2018
 *
 * Modification History :
 *    0.1    RSM    Initial Release
 *
 ******************************************************************************/
AC_INIT(EV.c)

AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM
AC_HEADER_STDC
AC_CHECK_HEADER(math.h,,)
AC_CHECK_HEADER(inttypes.h,,)
AC_CHECK_LIB(m, cos,[],AC_MSG_ERROR(math library not found))
AC_CHECK_HEADER(pthread.h,,)

AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)

AC_CHECK_TARGET_TOOL([STRIP],strip, no)
if test "x$STRIP" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate strip])
fi

AC_CHECK_TARGET_TOOL([LD],ld, no)
if test "x$LD" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate ld])
fi

AC_CHECK_TARGET_TOOL([AS],as, no)
if test "x$AS" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate as])
fi

AC_CHECK_TARGET_TOOL([NM],nm, no)
if test "x$NM" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate nm])
fi

AC_CHECK_TARGET_TOOL([OBJDUMP],objdump, no)
if test "x$OBJDUMP" == "xno" ; then
AC_MSG_ERROR([Unable to find on appropriate ojdump])
fi

AC_CHECK_TARGET_TOOL([READELF],readelf, no)
if test "x$READELF" == "xno" ; then
AC_MSG_ERROR([Unable to find appropriate readelf])
fi

AC_ARG_ENABLE([GDB], AS_HELP_STRING([--enable-GDB], [Enable feature GDB]))
AS_IF([test "x$enable_GDB" == "xyes"], [
     CFLAGS+=" -ggdb -DGDB"
     CPPFLAGS+=" -ggdb -DGDB"
     AH_TEMPLATE([GDB], [ Enable GDB.] )
],[
 CFLAGS+=" -s"
 LDFLAGS+=" -s"
])

AC_SUBST(NM)
AC_SUBST(LD)
AC_SUBST(OBJDUMP)
AC_SUBST(STRIP)
AC_SUBST(READELF)
AC_SUBST(AS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBS)
AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile)

